@@ -20,19 +20,21 @@ package net.luis.xsurvive.event.entity;
 
 import net.luis.xsurvive.XSurvive;
 import net.luis.xsurvive.capability.XSCapabilities;
+import net.luis.xsurvive.core.components.XSDataComponents;
 import net.luis.xsurvive.server.capability.ServerPlayerHandler;
+import net.luis.xsurvive.tag.XSEnchantmentTags;
 import net.luis.xsurvive.world.entity.EntityHelper;
 import net.luis.xsurvive.world.entity.EntityProvider;
 import net.luis.xsurvive.world.entity.player.IPlayer;
 import net.luis.xsurvive.world.entity.player.PlayerProvider;
 import net.luis.xsurvive.world.inventory.EnderChestMenu;
 import net.luis.xsurvive.world.item.EnchantedGoldenBookItem;
-import net.luis.xsurvive.world.item.IGlintColor;
 import net.luis.xsurvive.world.item.alchemy.XSPotions;
 import net.luis.xsurvive.world.item.enchantment.*;
 import net.luis.xsurvive.world.level.LevelProvider;
 import net.minecraft.ChatFormatting;
-import net.minecraft.core.BlockPos;
+import net.minecraft.core.*;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
@@ -45,6 +47,7 @@ import net.minecraft.world.SimpleMenuProvider;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.EquipmentSlot;
+import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.monster.piglin.PiglinAi;
 import net.minecraft.world.entity.player.Player;
@@ -52,8 +55,9 @@ import net.minecraft.world.entity.raid.Raid;
 import net.minecraft.world.inventory.InventoryMenu;
 import net.minecraft.world.item.*;
 import net.minecraft.world.item.alchemy.Potion;
-import net.minecraft.world.item.alchemy.PotionUtils;
+import net.minecraft.world.item.alchemy.PotionContents;
 import net.minecraft.world.item.enchantment.Enchantment;
+import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
@@ -65,11 +69,11 @@ import net.minecraftforge.event.entity.player.PlayerEvent.*;
 import net.minecraftforge.eventbus.api.Event;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod.EventBusSubscriber;
-import net.minecraftforge.registries.ForgeRegistries;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.Map.Entry;
+import java.util.Optional;
 
 /**
  *
@@ -80,7 +84,7 @@ import java.util.Map.Entry;
 @EventBusSubscriber(modid = XSurvive.MOD_ID)
 public class PlayerEventHandler {
 	
-	private static final String ATTACK_SPEED_TRANSLATION_KEY = Component.translatable(Attributes.ATTACK_SPEED.getDescriptionId()).getString();
+	private static final String ATTACK_SPEED_TRANSLATION_KEY = Component.translatable(Attributes.ATTACK_SPEED.value().getDescriptionId()).getString();
 	private static final Component ENDER_CHEST = Component.translatable("container.enderchest");
 	
 	@SubscribeEvent
@@ -91,19 +95,17 @@ public class PlayerEventHandler {
 			ItemStack result = left.copy();
 			if (left.getItem() instanceof EnchantedGoldenBookItem) {
 				event.setCanceled(true);
-			} else if ((left.isEnchantable() || left.isEnchanted()) && right.getItem() instanceof EnchantedGoldenBookItem goldenBook) {
-				Enchantment enchantment = goldenBook.getEnchantment(right);
-				if (enchantment instanceof IEnchantment ench) {
-					EnchantedItem enchantedItem = ench.isUpgradeEnchantment() ? IEnchantment.upgrade(left, right) : IEnchantment.merge(left, right);
+			} else if ((left.isEnchantable() || left.isEnchanted()) && right.getItem() instanceof EnchantedGoldenBookItem) {
+				Holder<Enchantment> enchantment = EnchantedGoldenBookItem.getEnchantment(right);
+				if (enchantment != null && GoldenEnchantmentHelper.isEnchantment(enchantment)) {
+					EnchantedItem enchantedItem = GoldenEnchantmentHelper.isUpgradeEnchantment(enchantment) ? GoldenEnchantmentHelper.upgrade(left, right) : GoldenEnchantmentHelper.merge(left, right);
 					event.setOutput(enchantedItem.stack());
 					event.setCost(enchantedItem.cost());
-				} else {
-					XSurvive.LOGGER.error("Enchantment '{}' is not a instance of IEnchantment", ForgeRegistries.ENCHANTMENTS.getKey(enchantment));
 				}
-			} else if ((left.isEnchanted() || left.getItem().isFoil(left)) && right.getItem() instanceof IGlintColor glintColor && !left.is(Items.ENCHANTED_BOOK)) {
-				int color = glintColor.getGlintColor(right);
+			} else if ((left.isEnchanted() || left.getItem().isFoil(left)) && right.has(XSDataComponents.GLINT_COLOR.get()) && !left.is(Items.ENCHANTED_BOOK)) {
+				int color = right.getOrDefault(XSDataComponents.GLINT_COLOR.get(), -1);
 				if (17 >= color && color >= 0) {
-					result.setTag(IGlintColor.createGlintTag(result.getOrCreateTag(), color));
+					result.set(XSDataComponents.GLINT_COLOR.get(), color);
 					event.setOutput(result);
 					event.setCost(5);
 				}
@@ -122,7 +124,7 @@ public class PlayerEventHandler {
 	
 	@SubscribeEvent
 	public static void breakSpeed(@NotNull BreakSpeed event) {
-		if (event.getState().is(Blocks.SPAWNER)) {
+		if (event.getState().is(Blocks.SPAWNER) || event.getState().is(Blocks.TRIAL_SPAWNER) || event.getState().is(Blocks.VAULT)) {
 			event.setCanceled(true);
 		}
 	}
@@ -131,21 +133,24 @@ public class PlayerEventHandler {
 	public static void itemTooltip(@NotNull ItemTooltipEvent event) {
 		ItemStack stack = event.getItemStack();
 		if (stack.getItem() instanceof PotionItem || stack.getItem() instanceof TippedArrowItem) {
-			Potion potion = PotionUtils.getPotion(stack);
-			if (potion == XSPotions.DIG_SPEED.get() || potion == XSPotions.LONG_DIG_SPEED.get() || potion == XSPotions.STRONG_DIG_SPEED.get()) {
-				List<MobEffectInstance> effects = potion.getEffects();
-				if (effects.size() == 1) {
-					List<Component> components = event.getToolTip();
-					int index = -1;
-					for (int i = 0; i < components.size(); i++) {
-						String string = components.get(i).getString();
-						if (string.contains(ATTACK_SPEED_TRANSLATION_KEY)) {
-							index = i;
-							break;
+			Optional<Holder<Potion>> optional = stack.getOrDefault(DataComponents.POTION_CONTENTS, PotionContents.EMPTY).potion();
+			if (optional.isPresent()) {
+				Potion potion = optional.get().value();
+				if (potion == XSPotions.DIG_SPEED.get() || potion == XSPotions.LONG_DIG_SPEED.get() || potion == XSPotions.STRONG_DIG_SPEED.get()) {
+					List<MobEffectInstance> effects = potion.getEffects();
+					if (effects.size() == 1) {
+						List<Component> components = event.getToolTip();
+						int index = -1;
+						for (int i = 0; i < components.size(); i++) {
+							String string = components.get(i).getString();
+							if (string.contains(ATTACK_SPEED_TRANSLATION_KEY)) {
+								index = i;
+								break;
+							}
 						}
-					}
-					if (index >= 0) {
-						components.set(index, Component.literal(String.format("+%d", (effects.get(0).getAmplifier() + 1) * 20) + "% Dig Speed").withStyle(ChatFormatting.BLUE));
+						if (index >= 0) {
+							components.set(index, Component.literal(String.format("+%d", (effects.getFirst().getAmplifier() + 1) * 20) + "% Dig Speed").withStyle(ChatFormatting.BLUE));
+						}
 					}
 				}
 			}
@@ -155,7 +160,7 @@ public class PlayerEventHandler {
 	@SubscribeEvent
 	public static void playerBreakSpeed(PlayerEvent.@NotNull BreakSpeed event) {
 		Player player = event.getEntity();
-		if (!player.onGround() && player.getItemBySlot(EquipmentSlot.FEET).getEnchantmentLevel(XSEnchantments.VOID_WALKER.get()) > 0) {
+		if (!player.onGround() && XSEnchantmentHelper.getEnchantmentLevel(player, XSEnchantments.VOID_WALKER, player.getItemBySlot(EquipmentSlot.FEET)) > 0) {
 			event.setNewSpeed(event.getOriginalSpeed() * 5.0F);
 		}
 	}
@@ -174,10 +179,11 @@ public class PlayerEventHandler {
 			original.reviveCaps();
 			IPlayer originalHandler = PlayerProvider.get(original);
 			IPlayer handler = PlayerProvider.get(player);
+			HolderLookup.Provider lookup = original.registryAccess();
 			if (event.isWasDeath()) {
-				handler.deserializePersistent(originalHandler.serializePersistent());
+				handler.deserializePersistent(lookup, originalHandler.serializePersistent(lookup));
 			} else {
-				handler.deserializeDisk(originalHandler.serializeDisk());
+				handler.deserializeDisk(lookup, originalHandler.serializeDisk(lookup));
 			}
 			original.invalidateCaps();
 		}
@@ -189,30 +195,12 @@ public class PlayerEventHandler {
 	}
 	
 	@SubscribeEvent
-	public static void playerSleepInBed(@NotNull PlayerSleepInBedEvent event) {
-		if (!event.getEntity().getAbilities().instabuild) {
-			event.setResult(Player.BedSleepingProblem.OTHER_PROBLEM);
-			event.getEntity().displayClientMessage(Component.translatable("message.xsurvive.sleeping"), true);
-			if (event.getEntity().level() instanceof ServerLevel level && (level.isRaining() || level.isThundering())) {
-				level.setWeatherParameters(6000, 0, false, false);
-			}
-			if (event.getEntity() instanceof ServerPlayer player) {
-				ServerPlayerHandler handler = PlayerProvider.getServer(player);
-				if (handler.canResetPhantomSpawn()) {
-					player.getStats().setValue(player, Stats.CUSTOM.get(Stats.TIME_SINCE_REST), 0);
-					handler.setNextPhantomReset(player.level().getDifficulty().getId() + Mth.nextInt(player.getRandom(), 6, 10));
-				}
-			}
-		}
-	}
-	
-	@SubscribeEvent
 	public static void playerTick(TickEvent.@NotNull PlayerTickEvent event) {
 		Player player = event.player;
 		if (event.phase == TickEvent.Phase.START) {
 			player.getCapability(XSCapabilities.PLAYER, null).ifPresent(IPlayer::tick);
 		}
-		boolean hasVoidWalker = player.getItemBySlot(EquipmentSlot.FEET).getEnchantmentLevel(XSEnchantments.VOID_WALKER.get()) > 0;
+		boolean hasVoidWalker = XSEnchantmentHelper.getEnchantmentLevel(player, XSEnchantments.VOID_WALKER, player.getItemBySlot(EquipmentSlot.FEET)) > 0;
 		BlockPos pos = new BlockPos(player.getBlockX(), player.getBlockY(), player.getBlockZ());
 		if (hasVoidWalker) {
 			player.fallDistance = 0.0F;
@@ -226,13 +214,15 @@ public class PlayerEventHandler {
 	
 	@SubscribeEvent
 	public static void rightClickItem(PlayerInteractEvent.@NotNull RightClickItem event) {
-		Entry<EquipmentSlot, ItemStack> entry = XSEnchantmentHelper.getItemWithEnchantment(XSEnchantments.ASPECT_OF_THE_END.get(), event.getEntity());
-		int aspectOfTheEnd = entry.getValue().getEnchantmentLevel(XSEnchantments.ASPECT_OF_THE_END.get());
+		LivingEntity entity = event.getEntity();
+		Holder<Enchantment> enchantment = XSEnchantments.ASPECT_OF_THE_END.getOrThrow(entity);
+		Entry<EquipmentSlot, ItemStack> entry = XSEnchantmentHelper.getItemWithEnchantment(enchantment, entity);
+		int aspectOfTheEnd = EnchantmentHelper.getItemEnchantmentLevel(enchantment, entry.getValue());
 		if (event.getEntity() instanceof ServerPlayer player && aspectOfTheEnd > 0 && entry.getValue().getItem() instanceof SwordItem) {
 			if (0 >= PlayerProvider.getServer(player).getEndAspectCooldown()) {
 				Vec3 clipVector = EntityHelper.clipWithDistance(player, player.level(), 6.0 * aspectOfTheEnd);
-				player.teleportToWithTicket(clipVector.x, clipVector.y, clipVector.z);
-				entry.getValue().hurtAndBreak(aspectOfTheEnd * 2, player, (p) -> p.broadcastBreakEvent(entry.getKey()));
+				player.teleportTo(clipVector.x, clipVector.y, clipVector.z);
+				entry.getValue().hurtAndBreak(aspectOfTheEnd * 2, player, entry.getKey());
 				PlayerProvider.getServer(player).setEndAspectCooldown(20);
 			}
 		}
@@ -256,7 +246,7 @@ public class PlayerEventHandler {
 					}
 					player.openMenu(new SimpleMenuProvider((id, inventory, playerIn) -> new EnderChestMenu(id, inventory), ENDER_CHEST));
 					player.awardStat(Stats.OPEN_ENDERCHEST);
-					PiglinAi.angerNearbyPiglins(player, true);
+					PiglinAi.angerNearbyPiglins(serverLevel, player, true);
 					level.playSound(null, pos.getX() + 0.5, pos.getY() + 0.5, pos.getZ() + 0.5, SoundEvents.ENDER_CHEST_OPEN, SoundSource.BLOCKS, 0.5F, player.getRandom().nextFloat() * 0.1F + 0.9F);
 				}
 			} else if (state.getBlock() == Blocks.BELL) {
